--- a/Log-127.0.1.1
+++ b/Log-127.0.1.1
@@ -2,7 +2,8 @@ Parsing done ...
 Server starting ....
 Starting algorithm ...
 Sent initial <M, 1> to node 3
-Message received: M	8
-
-Received <M, 8> from node 8
-Adopting node 8 as parent
+Received <M, 3> from node 3
+Adopting node 3 as parent
+Received <M, 4> from node 2
+Adopting node 2 as parent
+Received <T, 6> - Termination initiated by root
