--- a/Log-127.0.1.2
+++ b/Log-127.0.1.2
@@ -1,17 +1,12 @@
 Parsing done ...
 Server starting ....
 Starting algorithm ...
-Sent initial <M, 2> to node 1
-Message received: M	3
-
-Received <M, 3> from node 3
-Adopting node 3 as parent
-Message received: M	5
-
-Received <M, 5> from node 5
-Message received: M	4
-
+Sent initial <M, 2> to node 3
 Received <M, 4> from node 4
-Message received: M	8
-
-Received <M, 8> from node 8
+Adopting node 4 as parent
+Sent <P, 2> to node 4
+Received <M, 8> from node 5
+Adopting node 5 as parent
+Received <M, 3> from node 1
+Received <M, 3> from node 3
+Received <T, 8> - Termination initiated by root
