--- a/Log-127.0.1.3
+++ b/Log-127.0.1.3
@@ -1,14 +1,9 @@
 Parsing done ...
 Server starting ....
 Starting algorithm ...
-Sent initial <M, 3> to node 2
-Message received: M	8
-
-Received <M, 8> from node 8
-Adopting node 8 as parent
-Message received: M	3
-
-Received <M, 3> from node 3
-Message received: M	1
-
+Sent initial <M, 3> to node 6
+Received <M, 2> from node 2
 Received <M, 1> from node 1
+Received <M, 6> from node 6
+Adopting node 6 as parent
+Received <T, 8> - Termination initiated by root
