--- a/Log-127.0.1.4
+++ b/Log-127.0.1.4
@@ -2,6 +2,7 @@ Parsing done ...
 Server starting ....
 Starting algorithm ...
 Sent initial <M, 4> to node 2
-Message received: M	3
-
-Received <M, 3> from node 3
+Received <P, 4>	> from node 4
+Received <M, 8> from node 2
+Adopting node 2 as parent
+Received <T, 8> - Termination initiated by root
