--- a/Log-127.0.1.6
+++ b/Log-127.0.1.6
@@ -2,13 +2,8 @@ Parsing done ...
 Server starting ....
 Starting algorithm ...
 Sent initial <M, 6> to node 8
-Message received: M	8
-
+Received <M, 5> from node 5
+Received <M, 3> from node 3
 Received <M, 8> from node 8
 Adopting node 8 as parent
-Message received: M	7
-
-Received <M, 7> from node 7
-Message received: M	8
-
-Received <M, 8> from node 8
+Received <T, 8> - Termination initiated by root
