--- a/Log-127.0.1.8
+++ b/Log-127.0.1.8
@@ -1,13 +1,9 @@
 Parsing done ...
 Server starting ....
 Starting algorithm ...
-Sent initial <M, 8> to node 6
-Message received: M	6
-
+Sent initial <M, 8> to node 7
+Received <M, 7> from node 7
 Received <M, 6> from node 6
-Message received: M	7
-
-Received <M, 7> from node 7
-Message received: M	7
-
-Received <M, 7> from node 7
+Received <P, 8>	> from node 8
+I am node root
+Sent T to all neighbors
