--- a/Log-127.0.1.5
+++ b/Log-127.0.1.5
@@ -1,17 +1,10 @@
 Parsing done ...
 Server starting ....
 Starting algorithm ...
-Sent initial <M, 5> to node 2
-Message received: M	7
-
-Received <M, 7> from node 7
+Sent initial <M, 5> to node 6
+Received <M, 8> from node 7
 Adopting node 7 as parent
-Message received: M	8
-
+Sent <P, 5> to node 8
 Received <M, 8> from node 8
-Message received: M	8
-
-Received <M, 8> from node 8
-Message received: M	3
-
-Received <M, 3> from node 3
+Sent <R, 5> to node 8
+Received <T, 8> - Termination initiated by root
