--- a/Log-127.0.1.7
+++ b/Log-127.0.1.7
@@ -1,11 +1,8 @@
 Parsing done ...
 Server starting ....
 Starting algorithm ...
-Sent initial <M, 7> to node 5
-Message received: M	7
-
-Received <M, 7> from node 7
-Message received: M	8
-
+Sent initial <M, 7> to node 8
 Received <M, 8> from node 8
 Adopting node 8 as parent
+Received <M, 8> from node 5
+Received <T, 8> - Termination initiated by root
